--- a/assets/css/templatemo-cyborg-gaming.css
+++ b/assets/css/templatemo-cyborg-gaming.css
@@ -1736,7 +1736,7 @@ Sobre style
 .sobre ul {
   border-radius: 23px;
   padding: 30px;
-  background-color: #27292a;
+  background-color: #1f2122;
 }
 
 .sobre ul li {
