--- a/assets/css/templatemo-cyborg-gaming.css
+++ b/assets/css/templatemo-cyborg-gaming.css
@@ -91,7 +91,7 @@ a {
   text-decoration: none !important;
 }
 a:hover {
-	color: #F99;
+	color: #04B2D9;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -142,12 +142,12 @@ p {
 }
 
 ::selection {
-  background: #e75e8d;
+  background: #076DF2;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #e75e8d;
+  background: #076DF2;
   color: #fff;
 }
 
@@ -159,7 +159,7 @@ p {
 .main-button a {
   font-size: 14px;
   color: #fff;
-  background-color: #e75e8d;
+  background-color: #076DF2;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 25px;
@@ -173,16 +173,16 @@ p {
 
 .main-button a:hover {
   background-color: #fff;
-  color: #e75e8d;
+  color: #076DF2;
 }
 .texto-button-ler{
-color: #ec6090;
+color: #076DF2;
 }
 .main-border-button a {
   font-size: 14px;
-  color: #ec6090;
+  color: #076DF2;
   background-color: transparent;
-  border: 1px solid #ec6090;
+  border: 1px solid #076DF2;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 25px;
@@ -197,7 +197,7 @@ color: #ec6090;
 .main-border-button a:hover {
   border-color: #fff;
   background-color: #fff;
-  color: #e75e8d;
+  color: #076DF2;
 }
 
 .border-no-active a {
@@ -216,7 +216,7 @@ section {
 }
 
 .heading-section h4 {
-  color: #ec6090;
+  color: #076DF2;
   font-size: 34px;
   text-decoration: none;
   margin-bottom: 30px;
@@ -301,7 +301,7 @@ Pre-loader Style
   height: 16px;
   top: 12px;
   left: 15px;
-  background: #e75e8d;
+  background: #076DF2;
   border-radius: 50%;
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -324,7 +324,7 @@ Pre-loader Style
   width: 16px;
   height: 16px;
   margin-left: 16px;
-  background: #e75e8d;
+  background: #076DF2;
   border-radius: 50%;
 }
 
@@ -441,7 +441,7 @@ Header Style
   z-index: 999;
 }
 .link-jogo-inicio{
-color: #ec6090;
+color: #076DF2;
 }
 .link-jogo-inicio:hover{
 color: white;
@@ -478,7 +478,7 @@ color: white;
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #e75e8d !important;
+  color: #076DF2 !important;
 }
 
 
@@ -517,7 +517,7 @@ color: white;
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  background-color: #e75e8d;
+  background-color: #076DF2;
   display: block;
   position: absolute;
   width: 30px;
@@ -528,7 +528,7 @@ color: white;
 .background-header .main-nav .menu-trigger span,
 .background-header .main-nav .menu-trigger span:before,
 .background-header .main-nav .menu-trigger span:after {
-  background-color: #e75e8d;
+  background-color: #076DF2;
 }
 
 .header-area .main-nav .menu-trigger span:before,
@@ -537,7 +537,7 @@ color: white;
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  background-color: #e75e8d;
+  background-color: #076DF2;
   display: block;
   position: absolute;
   width: 30px;
@@ -548,7 +548,7 @@ color: white;
 
 .background-header .main-nav .menu-trigger span:before,
 .background-header .main-nav .menu-trigger span:after {
-  background-color: #e75e8d;
+  background-color: #076DF2;
 }
 
 .header-area .main-nav .menu-trigger span:before,
@@ -589,11 +589,11 @@ color: white;
   -ms-transform: translateY(6px) translateX(1px) rotate(45deg);
   -webkit-transform: translateY(6px) translateX(1px) rotate(45deg);
   transform: translateY(6px) translateX(1px) rotate(45deg);
-  background-color: #e75e8d;
+  background-color: #076DF2;
 }
 
 .background-header .main-nav .menu-trigger.active span:before {
-  background-color: #e75e8d;
+  background-color: #076DF2;
 }
 
 .header-area .main-nav .menu-trigger.active span:after {
@@ -601,11 +601,11 @@ color: white;
   -ms-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   -webkit-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  background-color: #e75e8d;
+  background-color: #076DF2;
 }
 
 .background-header .main-nav .menu-trigger.active span:after {
-  background-color: #e75e8d;
+  background-color: #076DF2;
 }
 
 .header-area.header-sticky {
@@ -656,7 +656,7 @@ color: white;
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #e75e8d!important;
+    color: #076DF2!important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -718,13 +718,13 @@ color: white;
   }
   .header-area .main-nav .nav li a:hover {
     background: #fff !important;
-    color: #e75e8d!important;
+    color: #076DF2!important;
   }
   .header-area .main-nav .nav li:last-child a img {
     display: none;
   }
   .header-area .main-nav .nav li:last-child a:hover {
-    color: #ec6090 !important;
+    color: #076DF2 !important;
     background-color: transparent !important;
   }
   .header-area .main-nav .nav li.has-sub ul.sub-menu {
@@ -777,7 +777,7 @@ Banner Style
 
 .main-banner h6 {
   font-size: 20px;
-  color: #fff;
+  color: #0D448C;
   font-weight: 400;
   margin-bottom: 25px;
 }
@@ -786,11 +786,12 @@ Banner Style
   font-size: 45px;
   text-transform: uppercase;
   margin-bottom: 25px;
+  color: #0D448C;
 }
 
 .main-banner h4 em {
   font-style: normal;
-  color: #ec6090;
+  color: #076DF2;
 }
 
 /* 
@@ -854,7 +855,7 @@ Most Popular Style
 }
 
 .most-popular .item ul li:last-child i {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .most-popular .main-button {
@@ -947,7 +948,7 @@ footer p a {
 }
 
 footer p a:hover {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 /* 
@@ -986,7 +987,7 @@ Featured Games Style
 .featured-games .item .thumb .hover-effect h6 {
   background-color: rgba(31,33,34,0.95);
   display: inline-block;
-  color: #ec6090;
+  color: #076DF2;
   font-weight: 600;
   font-size: 14px;
   padding: 10px 20px;
@@ -1027,7 +1028,7 @@ Featured Games Style
 }
 
 .featured-games .item ul li:last-child i {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .featured-games .owl-nav {
@@ -1057,7 +1058,7 @@ Featured Games Style
 .featured-games .owl-nav .owl-prev span:hover,
 .featured-games .owl-nav .owl-next span:hover {
   opacity: 1;
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .top-downloaded {
@@ -1107,7 +1108,7 @@ Featured Games Style
   height: 46px;
   text-align: center;
   line-height: 46px;
-  color: #ec6090;
+  color: #076DF2;
   background-color: #27292a;
   border-radius: 50%;
 }
@@ -1124,7 +1125,7 @@ Featured Games Style
 
 .top-downloaded .text-button a {
   font-weight: 600;
-  color: #ec6090;
+  color: #076DF2;
   font-size: 15px;
 }
 
@@ -1198,7 +1199,7 @@ Live Stream Style
 
 .live-stream .hover-effect .live a { 
   position: absolute;
-  background-color: rgba(236, 96, 144, 0.9);
+  background-color: #0A58BF;
   padding: 5px 10px;
   border-radius: 23px;
   color: #fff;
@@ -1220,7 +1221,7 @@ Live Stream Style
 }
 
 .live-stream .hover-effect ul li a {
-  background-color: rgba(236, 96, 144, 0.9);
+  background-color: #0A58BF;
   padding: 5px 10px;
   border-radius: 23px;
   color: #fff;
@@ -1233,7 +1234,7 @@ Live Stream Style
 
 .live-stream span i {
   color: #fff;
-  background-color: #ec6090;
+  background-color: #076DF2;
   border-radius: 50%;
   font-size: 12px;
   width: 20px;
@@ -1246,7 +1247,7 @@ Live Stream Style
 
 .live-stream span {
   font-size: 14px;
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .live-stream .down-content h4 {
@@ -1286,7 +1287,7 @@ Featured Banner Style
   display: inline-block;
   text-align: center;
   line-height: 46px;
-  color: #ec6090;
+  color: #076DF2;
 }
 
 /* 
@@ -1346,7 +1347,7 @@ Game Details Style
 }
 
 .game-details .content .left-info ul li:last-child i {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .game-details .content .right-info {
@@ -1374,7 +1375,7 @@ Game Details Style
 } 
 
 .game-details .content .right-info ul li i {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .game-details.main-border-button {
@@ -1441,7 +1442,7 @@ Other Related Style
 }
 
 .other-games ul li:last-child i {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 /* 
@@ -1498,7 +1499,7 @@ Videos Style
 }
 
 .video-style ul li:last-child i {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 
@@ -1543,13 +1544,13 @@ Top Streamers Style
 .top-streamers ul li h6 {
   display: inline;
   font-size: 14px;
-  color: #ec6090;
+  color: #076DF2;
   font-weight: 400;
 }
 
 .top-streamers ul li h6 i {
   color: #fff;
-  background-color: #ec6090;
+  background-color: #076DF2;
   border-radius: 50%;
   font-size: 12px;
   width: 20px;
@@ -1583,7 +1584,7 @@ Profile Style
 .main-profile .main-info span {
   font-size: 14px;
   color: #fff;
-  background-color: #e75e8d;
+  background-color: #076DF2;
   padding: 8px 20px;
   display: inline-block;
   border-radius: 25px;
@@ -1619,14 +1620,14 @@ Profile Style
 .main-profile ul li span {
   float: right;
   font-weight: 500;
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .main-profile ul li a {
   float: center;
   text-align: center;
   font-weight: 500;
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .main-profile ul li a:hover {
@@ -1676,7 +1677,7 @@ Profile Style
     display: inline-block;
     text-align: center;
     line-height: 46px;
-    color: #ec6090;
+    color: #076DF2;
 }
 
 .clips .item h4 {
@@ -1685,7 +1686,7 @@ Profile Style
 }
 
 .clips .item span i {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .clips .item span {
@@ -1715,7 +1716,7 @@ Sobre style
 .sobre .main-info span {
   font-size: 14px;
   color: #fff;
-  background-color: #e75e8d;
+  background-color: #076DF2;
   padding: 8px 20px;
   display: inline-block;
   border-radius: 25px;
@@ -1751,14 +1752,14 @@ Sobre style
 
 .sobre ul li span {
   font-weight: 500;
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .sobre ul li a {
   float: center;
   text-align: center;
   font-weight: 500;
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .sobre ul li a:hover {
@@ -1808,7 +1809,7 @@ Sobre style
     display: inline-block;
     text-align: center;
     line-height: 46px;
-    color: #ec6090;
+    color: #076DF2;
 }
 
 .sobrec .item h4 {
@@ -1817,7 +1818,7 @@ Sobre style
 }
 
 .sobrec .item span i {
-  color: #ec6090;
+  color: #076DF2;
 }
 
 .sobrec .item span {
@@ -1967,3 +1968,4 @@ body {
           top: 10px;
           right: 10px;
           cursor: pointer;
+      }
